[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sample_project"
version = "0.1.0"
description = "A sample Python project showcasing algorithms, data structures, control flow, and string manipulation implementations"
requires-python = ">=3.10"
authors = [
    { name = "Sample Author", email = "author@example.com" }
]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

# Black - Code formatter
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

# Mypy - Static type checker
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ruff - Fast Python linter
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["sample_project"]

# Pytest - Testing framework
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=sample_project",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
